{{$NEXT}}
    - simplify connection cache key generation
    - remove obscure hash slice syntax since _connect_cached only returns one
      arg anyway

0.102030  2010-07-22 08:47:59 EDT
    - no real changes to the code, just the build
      e.g. switching to a META.json file from a META.yml file