@@ -39,7 +39,7 @@ format = -- %-9v %{yyyy-MM-dd HH:mm:ss VVV}d
 
 ; Prereqs missed by AutoPrereq
 [Prereqs]
-Test::Net::RabbitMQ = 0
+Test::Net::RabbitMQ = 0.09
 
 ; Pick a version Number based on the day
 [AutoVersion]
